Added different databases for test and prod

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,5 @@
-
 #JPA
-spring.jpa.database=postgresql
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 
-#Datasource
-spring.datasource.username=battleships
-spring.datasource.password=battleships
-spring.datasource.url=jdbc:postgresql://localhost:5532/battleships
+battleship.eigene-property=meine eigene property die per default gesetzt ist
