--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,5 +1,7 @@
 server.port=8080
+
 spring.jpa.database=mysql
+spring.jpa.hibernate.ddl-auto=create-drop
 
 #Datasource
 spring.datasource.username=battleships
