Added docker support

--- a/src/main/resources/application-development.properties
+++ b/src/main/resources/application-development.properties
@@ -6,7 +6,7 @@ spring.jpa.database=postgresql
 #Datasource
 spring.datasource.username=battleships
 spring.datasource.password=3WzP7462Ek4b
-spring.datasource.url=jdbc:postgresql://battleships-db-postgres:5532/battleships
+spring.datasource.url=jdbc:postgresql://localhost:5532/battleships
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 battleship.eigene-property=meine eigene property in production
