--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 
 battleship.eigene-property=meine eigene property die per default gesetzt ist
+
+spring.profiles.active=development
