--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,11 +1,12 @@
 server.port=8080
 
 spring.jpa.database=mysql
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
 
 #Datasource
 spring.datasource.username=battleships
 spring.datasource.password=battleships
-spring.datasource.url=jdbc:mysql://localhost:5306/battleships
+spring.datasource.url=jdbc:mysql://battleships-db-mysql:5306/battleships?autoReconnect=true&useSSL=false
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 battleship.eigene-property=meine eigene property in test
